// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots > renders the angry mood 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" width="400" height="400" viewBox="0 0 400 400" role="img" aria-label="Stacky: Steady commits, green CI (angry, level 5)">
  <style>
    :root { --outline: #1A1A1A; --blush: #FFB6C1; --tear: #5BA8FF; }
    @media (prefers-color-scheme: dark) {
      :root { --outline: #E8E8E8; --blush: #FF8FA3; --tear: #87C5FF; }
    }
  </style>
  <title>Stacky</title>
  <desc>Steady commits, green CI</desc>
  <defs>
    <radialGradient id="body-a3f5b8c2d1e0">
      <stop offset="0%" stop-color="#1E4E8E"/>
      <stop offset="100%" stop-color="#3178C6"/>
    </radialGradient>
  </defs>
  <rect width="400" height="400" fill="transparent"/>
  <g opacity="1">
    <ellipse cx="200" cy="180" rx="110" ry="121" fill="url(#body-a3f5b8c2d1e0)" stroke="var(--outline)" stroke-width="3" vector-effect="non-scaling-stroke"/>
    
    
    <path d="M 138 152 L 162 164" stroke="var(--outline)" stroke-width="4" stroke-linecap="round"/>
    <path d="M 262 152 L 238 164" stroke="var(--outline)" stroke-width="4" stroke-linecap="round"/>
    <path d="M 170 228 l 12 -10 l 12 10 l 12 -10 l 12 10" stroke="var(--outline)" stroke-width="3" fill="none" stroke-linejoin="miter"/>
    
    <g aria-label="collar">
      <path d="M 130 240 Q 200 258 270 240" stroke="#FFD700" stroke-width="6" fill="none" stroke-linecap="round"/>
      <circle cx="200" cy="258" r="5" fill="#FFD700" stroke="var(--outline)" stroke-width="1.5"/>
    </g>
    
    <path d="M 122 110 Q 112 150 140 158 Q 154 130 122 110 Z" fill="#3178C6" stroke="var(--outline)" stroke-width="2"/>
    <path d="M 278 110 Q 288 150 260 158 Q 246 130 278 110 Z" fill="#3178C6" stroke="var(--outline)" stroke-width="2"/>
    <g aria-label="sparkles">
      <path d="M 320 120 L 325 130 L 330 120 L 325 110 Z" fill="#FFD700"/>
      <path d="M 70 120 L 75 130 L 80 120 L 75 110 Z" fill="#FFD700"/>
      <path d="M 200 50 L 205 60 L 210 50 L 205 40 Z" fill="#FFD700"/>
    </g>
  </g>
</svg>"
`;

exports[`snapshots > renders the excited mood 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" width="400" height="400" viewBox="0 0 400 400" role="img" aria-label="Stacky: Steady commits, green CI (excited, level 5)">
  <style>
    :root { --outline: #1A1A1A; --blush: #FFB6C1; --tear: #5BA8FF; }
    @media (prefers-color-scheme: dark) {
      :root { --outline: #E8E8E8; --blush: #FF8FA3; --tear: #87C5FF; }
    }
  </style>
  <title>Stacky</title>
  <desc>Steady commits, green CI</desc>
  <defs>
    <radialGradient id="body-a3f5b8c2d1e0">
      <stop offset="0%" stop-color="#1E4E8E"/>
      <stop offset="100%" stop-color="#3178C6"/>
    </radialGradient>
  </defs>
  <rect width="400" height="400" fill="transparent"/>
  <g opacity="1">
    <ellipse cx="200" cy="180" rx="110" ry="121" fill="url(#body-a3f5b8c2d1e0)" stroke="var(--outline)" stroke-width="3" vector-effect="non-scaling-stroke"/>
    
    
    <ellipse cx="150" cy="160" rx="10" ry="5" fill="none" stroke="var(--outline)" stroke-width="2.5"/>
    <ellipse cx="250" cy="160" rx="10" ry="5" fill="none" stroke="var(--outline)" stroke-width="2.5"/>
    <circle cx="150" cy="160" r="2.5" fill="var(--outline)"/>
    <circle cx="250" cy="160" r="2.5" fill="var(--outline)"/>
    <ellipse cx="200" cy="228" rx="22" ry="14" fill="var(--outline)"/>
    <ellipse cx="200" cy="224" rx="14" ry="6" fill="#ff6b81"/>
    
    <g aria-label="collar">
      <path d="M 130 240 Q 200 258 270 240" stroke="#FFD700" stroke-width="6" fill="none" stroke-linecap="round"/>
      <circle cx="200" cy="258" r="5" fill="#FFD700" stroke="var(--outline)" stroke-width="1.5"/>
    </g>
    
    <path d="M 122 110 Q 112 150 140 158 Q 154 130 122 110 Z" fill="#3178C6" stroke="var(--outline)" stroke-width="2"/>
    <path d="M 278 110 Q 288 150 260 158 Q 246 130 278 110 Z" fill="#3178C6" stroke="var(--outline)" stroke-width="2"/>
    <g aria-label="sparkles">
      <path d="M 320 120 L 325 130 L 330 120 L 325 110 Z" fill="#FFD700"/>
      <path d="M 70 120 L 75 130 L 80 120 L 75 110 Z" fill="#FFD700"/>
      <path d="M 200 50 L 205 60 L 210 50 L 205 40 Z" fill="#FFD700"/>
    </g>
  </g>
</svg>"
`;

exports[`snapshots > renders the ghost mood 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" width="400" height="400" viewBox="0 0 400 400" role="img" aria-label="Stacky: Steady commits, green CI (ghost, level 5)">
  <style>
    :root { --outline: #1A1A1A; --blush: #FFB6C1; --tear: #5BA8FF; }
    @media (prefers-color-scheme: dark) {
      :root { --outline: #E8E8E8; --blush: #FF8FA3; --tear: #87C5FF; }
    }
  </style>
  <title>Stacky</title>
  <desc>Steady commits, green CI</desc>
  <defs>
    <radialGradient id="body-a3f5b8c2d1e0">
      <stop offset="0%" stop-color="#1E4E8E"/>
      <stop offset="100%" stop-color="#3178C6"/>
    </radialGradient>
  </defs>
  <rect width="400" height="400" fill="transparent"/>
  <g opacity="0.55">
    <ellipse cx="200" cy="180" rx="110" ry="121" fill="url(#body-a3f5b8c2d1e0)" stroke="var(--outline)" stroke-width="3" vector-effect="non-scaling-stroke"/>
    
    
    <circle cx="150" cy="160" r="10" fill="none" stroke="var(--outline)" stroke-width="2"/>
    <circle cx="250" cy="160" r="10" fill="none" stroke="var(--outline)" stroke-width="2"/>
    <circle cx="200" cy="224" r="6" fill="var(--outline)"/>
    
    <g aria-label="collar">
      <path d="M 130 240 Q 200 258 270 240" stroke="#FFD700" stroke-width="6" fill="none" stroke-linecap="round"/>
      <circle cx="200" cy="258" r="5" fill="#FFD700" stroke="var(--outline)" stroke-width="1.5"/>
    </g>
    
    <path d="M 122 110 Q 112 150 140 158 Q 154 130 122 110 Z" fill="#3178C6" stroke="var(--outline)" stroke-width="2"/>
    <path d="M 278 110 Q 288 150 260 158 Q 246 130 278 110 Z" fill="#3178C6" stroke="var(--outline)" stroke-width="2"/>
    <g aria-label="sparkles">
      <path d="M 320 120 L 325 130 L 330 120 L 325 110 Z" fill="#FFD700"/>
      <path d="M 70 120 L 75 130 L 80 120 L 75 110 Z" fill="#FFD700"/>
      <path d="M 200 50 L 205 60 L 210 50 L 205 40 Z" fill="#FFD700"/>
    </g>
  </g>
</svg>"
`;

exports[`snapshots > renders the happy mood 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" width="400" height="400" viewBox="0 0 400 400" role="img" aria-label="Stacky: Steady commits, green CI (happy, level 5)">
  <style>
    :root { --outline: #1A1A1A; --blush: #FFB6C1; --tear: #5BA8FF; }
    @media (prefers-color-scheme: dark) {
      :root { --outline: #E8E8E8; --blush: #FF8FA3; --tear: #87C5FF; }
    }
  </style>
  <title>Stacky</title>
  <desc>Steady commits, green CI</desc>
  <defs>
    <radialGradient id="body-a3f5b8c2d1e0">
      <stop offset="0%" stop-color="#1E4E8E"/>
      <stop offset="100%" stop-color="#3178C6"/>
    </radialGradient>
  </defs>
  <rect width="400" height="400" fill="transparent"/>
  <g opacity="1">
    <ellipse cx="200" cy="180" rx="110" ry="121" fill="url(#body-a3f5b8c2d1e0)" stroke="var(--outline)" stroke-width="3" vector-effect="non-scaling-stroke"/>
    
    
    <ellipse cx="150" cy="160" rx="10" ry="5" fill="none" stroke="var(--outline)" stroke-width="2.5"/>
    <ellipse cx="250" cy="160" rx="10" ry="5" fill="none" stroke="var(--outline)" stroke-width="2.5"/>
    <circle cx="150" cy="160" r="2.5" fill="var(--outline)"/>
    <circle cx="250" cy="160" r="2.5" fill="var(--outline)"/>
    <path d="M 160 220 Q 200 236.125 240 220" stroke="var(--outline)" stroke-width="3" fill="none"/>
    
    <g aria-label="collar">
      <path d="M 130 240 Q 200 258 270 240" stroke="#FFD700" stroke-width="6" fill="none" stroke-linecap="round"/>
      <circle cx="200" cy="258" r="5" fill="#FFD700" stroke="var(--outline)" stroke-width="1.5"/>
    </g>
    
    <path d="M 122 110 Q 112 150 140 158 Q 154 130 122 110 Z" fill="#3178C6" stroke="var(--outline)" stroke-width="2"/>
    <path d="M 278 110 Q 288 150 260 158 Q 246 130 278 110 Z" fill="#3178C6" stroke="var(--outline)" stroke-width="2"/>
    <g aria-label="sparkles">
      <path d="M 320 120 L 325 130 L 330 120 L 325 110 Z" fill="#FFD700"/>
      <path d="M 70 120 L 75 130 L 80 120 L 75 110 Z" fill="#FFD700"/>
      <path d="M 200 50 L 205 60 L 210 50 L 205 40 Z" fill="#FFD700"/>
    </g>
  </g>
</svg>"
`;

exports[`snapshots > renders the sad mood 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" width="400" height="400" viewBox="0 0 400 400" role="img" aria-label="Stacky: Steady commits, green CI (sad, level 5)">
  <style>
    :root { --outline: #1A1A1A; --blush: #FFB6C1; --tear: #5BA8FF; }
    @media (prefers-color-scheme: dark) {
      :root { --outline: #E8E8E8; --blush: #FF8FA3; --tear: #87C5FF; }
    }
  </style>
  <title>Stacky</title>
  <desc>Steady commits, green CI</desc>
  <defs>
    <radialGradient id="body-a3f5b8c2d1e0">
      <stop offset="0%" stop-color="#1E4E8E"/>
      <stop offset="100%" stop-color="#3178C6"/>
    </radialGradient>
  </defs>
  <rect width="400" height="400" fill="transparent"/>
  <g opacity="1">
    <ellipse cx="200" cy="180" rx="110" ry="121" fill="url(#body-a3f5b8c2d1e0)" stroke="var(--outline)" stroke-width="3" vector-effect="non-scaling-stroke"/>
    
    
    <path d="M 140 150 Q 150 160 160 150" stroke="var(--outline)" stroke-width="3" fill="none"/>
    <path d="M 240 150 Q 250 160 260 150" stroke="var(--outline)" stroke-width="3" fill="none"/>
    <path d="M 150 165 L 146 178" stroke="var(--tear)" stroke-width="3" fill="none"/>
    <path d="M 250 165 L 254 178" stroke="var(--tear)" stroke-width="3" fill="none"/>
    <path d="M 160 230 Q 200 210 240 230" stroke="var(--outline)" stroke-width="3" fill="none"/>
    
    <g aria-label="collar">
      <path d="M 130 240 Q 200 258 270 240" stroke="#FFD700" stroke-width="6" fill="none" stroke-linecap="round"/>
      <circle cx="200" cy="258" r="5" fill="#FFD700" stroke="var(--outline)" stroke-width="1.5"/>
    </g>
    
    <path d="M 122 110 Q 112 150 140 158 Q 154 130 122 110 Z" fill="#3178C6" stroke="var(--outline)" stroke-width="2"/>
    <path d="M 278 110 Q 288 150 260 158 Q 246 130 278 110 Z" fill="#3178C6" stroke="var(--outline)" stroke-width="2"/>
    <g aria-label="sparkles">
      <path d="M 320 120 L 325 130 L 330 120 L 325 110 Z" fill="#FFD700"/>
      <path d="M 70 120 L 75 130 L 80 120 L 75 110 Z" fill="#FFD700"/>
      <path d="M 200 50 L 205 60 L 210 50 L 205 40 Z" fill="#FFD700"/>
    </g>
  </g>
</svg>"
`;

exports[`snapshots > renders the sick mood 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" width="400" height="400" viewBox="0 0 400 400" role="img" aria-label="Stacky: Steady commits, green CI (sick, level 5)">
  <style>
    :root { --outline: #1A1A1A; --blush: #FFB6C1; --tear: #5BA8FF; }
    @media (prefers-color-scheme: dark) {
      :root { --outline: #E8E8E8; --blush: #FF8FA3; --tear: #87C5FF; }
    }
  </style>
  <title>Stacky</title>
  <desc>Steady commits, green CI</desc>
  <defs>
    <radialGradient id="body-a3f5b8c2d1e0">
      <stop offset="0%" stop-color="#1E4E8E"/>
      <stop offset="100%" stop-color="#3178C6"/>
    </radialGradient>
  </defs>
  <rect width="400" height="400" fill="transparent"/>
  <g opacity="1">
    <ellipse cx="200" cy="180" rx="110" ry="121" fill="url(#body-a3f5b8c2d1e0)" stroke="var(--outline)" stroke-width="3" vector-effect="non-scaling-stroke"/>
    
    
    <path d="M 142 152 L 158 168 M 158 152 L 142 168" stroke="var(--outline)" stroke-width="3"/>
    <path d="M 242 152 L 258 168 M 258 152 L 242 168" stroke="var(--outline)" stroke-width="3"/>
    <path d="M 160 220 q 10 -8 20 0 t 20 0 t 20 0" stroke="var(--outline)" stroke-width="3" fill="none"/>
    
    <g aria-label="collar">
      <path d="M 130 240 Q 200 258 270 240" stroke="#FFD700" stroke-width="6" fill="none" stroke-linecap="round"/>
      <circle cx="200" cy="258" r="5" fill="#FFD700" stroke="var(--outline)" stroke-width="1.5"/>
    </g>
    
    <path d="M 122 110 Q 112 150 140 158 Q 154 130 122 110 Z" fill="#3178C6" stroke="var(--outline)" stroke-width="2"/>
    <path d="M 278 110 Q 288 150 260 158 Q 246 130 278 110 Z" fill="#3178C6" stroke="var(--outline)" stroke-width="2"/>
    <g aria-label="sparkles">
      <path d="M 320 120 L 325 130 L 330 120 L 325 110 Z" fill="#FFD700"/>
      <path d="M 70 120 L 75 130 L 80 120 L 75 110 Z" fill="#FFD700"/>
      <path d="M 200 50 L 205 60 L 210 50 L 205 40 Z" fill="#FFD700"/>
    </g>
  </g>
</svg>"
`;

exports[`snapshots > renders the sleepy mood 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" width="400" height="400" viewBox="0 0 400 400" role="img" aria-label="Stacky: Steady commits, green CI (sleepy, level 5)">
  <style>
    :root { --outline: #1A1A1A; --blush: #FFB6C1; --tear: #5BA8FF; }
    @media (prefers-color-scheme: dark) {
      :root { --outline: #E8E8E8; --blush: #FF8FA3; --tear: #87C5FF; }
    }
  </style>
  <title>Stacky</title>
  <desc>Steady commits, green CI</desc>
  <defs>
    <radialGradient id="body-a3f5b8c2d1e0">
      <stop offset="0%" stop-color="#1E4E8E"/>
      <stop offset="100%" stop-color="#3178C6"/>
    </radialGradient>
  </defs>
  <rect width="400" height="400" fill="transparent"/>
  <g opacity="1">
    <ellipse cx="200" cy="180" rx="110" ry="121" fill="url(#body-a3f5b8c2d1e0)" stroke="var(--outline)" stroke-width="3" vector-effect="non-scaling-stroke"/>
    
    
    <path d="M 140 160 Q 150 166 160 160" stroke="var(--outline)" stroke-width="3" fill="none"/>
    <path d="M 240 160 Q 250 166 260 160" stroke="var(--outline)" stroke-width="3" fill="none"/>
    <line x1="188" y1="220" x2="212" y2="220" stroke="var(--outline)" stroke-width="3" stroke-linecap="round"/>
    
    <g aria-label="collar">
      <path d="M 130 240 Q 200 258 270 240" stroke="#FFD700" stroke-width="6" fill="none" stroke-linecap="round"/>
      <circle cx="200" cy="258" r="5" fill="#FFD700" stroke="var(--outline)" stroke-width="1.5"/>
    </g>
    
    <path d="M 122 110 Q 112 150 140 158 Q 154 130 122 110 Z" fill="#3178C6" stroke="var(--outline)" stroke-width="2"/>
    <path d="M 278 110 Q 288 150 260 158 Q 246 130 278 110 Z" fill="#3178C6" stroke="var(--outline)" stroke-width="2"/>
    <g aria-label="sparkles">
      <path d="M 320 120 L 325 130 L 330 120 L 325 110 Z" fill="#FFD700"/>
      <path d="M 70 120 L 75 130 L 80 120 L 75 110 Z" fill="#FFD700"/>
      <path d="M 200 50 L 205 60 L 210 50 L 205 40 Z" fill="#FFD700"/>
    </g>
    <g aria-label="zzz" font-family="monospace" font-weight="bold" fill="var(--outline)">
      <text x="290" y="100" font-size="22">Z</text>
      <text x="310" y="80" font-size="16">z</text>
      <text x="325" y="65" font-size="12">z</text>
    </g>
  </g>
</svg>"
`;
